# CNN_Classifier_App

./: .gitignore  README.md  dvc.yaml  init_setup.sh  params.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini
configs/: config.yaml
research/: st_01.ipynb  st_02_trials.ipynb  st_03_callbacks_trials.ipynb  st_04_training_trials.ipynb  st_05_evaluate_trials.ipynb  trials.ipynb
src/classifier_app/: __init__.py
src/classifier_app/components/: __init__.py  data_ingestion.py  evaluate_model.py  prepare_base_model.py  prepare_callbacks.py  training.py
src/classifier_app/config/: __init__.py  configuration.py
src/classifier_app/entity/: __init__.py  config_entity.py
src/classifier_app/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model_config.py  stage_03_training.py  stage_04_evaluate_model.py
src/classifier_app/utils/: __init__.py  common.py
