### This file contains the metadata of the project

[metadata]
licence = MIT
licence_file = LICENCE
classifier = 
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
install requires = 
    ensure==1.0.2
python_requires = >= 3.7

[options.extra_require]
testing = 
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0 

[option.package_data]
classifier_app = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py
